# django-content-settings

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  README_SHORT.md  docker-compose.yml  mdsource.py  mkdocs.yml  noxfile.py  pyproject.toml  set_version.py
content_settings/: admin.py  apps.py  cache_triggers.py  caching.py  conf.py  context_managers.py  context_processors.py  export.py  fields.py  functools.py  middleware.py  middlewares.py  migrate.py  models.py  permissions.py  receivers.py  settings.py  signals.py  store.py  tags.py  urls.py  utils.py  views.py  widgets.py
content_settings/defaults/: collections.py  context.py  filters.py  modifiers.py
content_settings/management/commands/: content_settings_export.py  content_settings_import.py  static_content_set_new_values.py
content_settings/migrations/: 0001_initial.py  0002_user_defined.py  0003_user_preview.py  0004_userdefined_preview.py
content_settings/templates/admin/content_settings/contentsetting/: change_form.html  change_list.html  (+5 more)
content_settings/templatetags/: content_settings_admin.py  content_settings_extras.py
content_settings/tests/: test_all_settings.py
content_settings/types/: __init__.py  array.py  basic.py  datetime.py  each.py  lazy.py  markup.py  mixins.py  template.py  validators.py
cs_test/: docker-compose.yml  manage.py
cs_test/cs_test/: asgi.py  settings.py  settings_maria.py  urls.py  wsgi.py
cs_test/songs/: admin.py  content_settings.py  models.py  urls.py
cs_test/songs/migrations/: 0001_initial.py  0002_userdefined_preview.py  0003_admin.py  0004_update_settings.py
cs_test/songs/templates/songs/: index.html
docs/: access.md  admin.md  api.md  caching.md  changelog.md  commands.md  contribute.md  cookbook.md  custom.md  defaults.md  epilogue.md  extends.md  faq.md  first.md  glossary.md  index.md  permissions.md  settings.md  source.md  template_types.md  types.md  ui.md  uservar.md
docs/source/: caching.md  conf.md  context_managers.md  index.md  permissions.md  signals.md
docs/source/types/: array.md  basic.md  datetime.md  each.md  lazy.md  markup.md  mixins.md  template.md  validators.md
tests/: __init__.py  conftest.py  test_admin.py  test_admin_import.py  test_admin_preview.py  test_api.py  test_caching.py  test_commands.py  test_context_defaults.py  test_get_help.py  test_init.py  test_json_view_value.py  test_lazy.py  test_migrate_db.py  test_types_array.py  test_types_array_split.py  test_types_basic.py  test_types_datetime.py  test_types_each.py  test_types_markup.py  test_types_template.py  test_unit_defaults.py  test_unit_utils.py  test_units.py  test_user_defined_types.py  test_utils.py  tools.py  urls.py
tests/books/: content_settings.py  models.py  urls.py
tests/books/templates/books/: index.html  list.html  simple.html
