[tool.poetry]
name = "django-content-settings"
version = "0.13.1"
description = "DCS - the most advanced admin editable setting"
homepage = "https://django-content-settings.readthedocs.io/en/latest/"
repository = "https://github.com/occipital/django-content-settings/"
authors = ["oduvan <a.lyabah@checkio.org>"]
keywords = ["Django", "settings"]
readme = "README_SHORT.md"
classifiers = [
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license = "MIT"
packages = [{include = "content_settings"}]

[tool.poetry.dependencies]
python = ">=3.8"
django = ">=3.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
pytest-django = "^4.7.0"
pytest-cov = "^4.1.0"
nox = "^2023.4.22"
django-webtest = "^1.9.11"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
